# CellSim

./: .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README
activators/: CMakeLists.txt
activators/inc/: PLC_activator.hpp  PLC_activator_koenigsberger.hpp  halidi_activator_base.hpp  koenigsberger_activator_base.hpp  potassium_chloride_activator.hpp  potassium_chloride_activator_base.hpp  potassium_chloride_activator_koenigsberger.hpp  potential_activator.hpp  potential_activator_base.hpp  potential_activator_koenigsberger.hpp  potential_activator_koenigsberger_tanh.hpp  potential_activator_tanh.hpp  potential_activator_tanh_base.hpp
activators/src/: PLC_activator.cpp  PLC_activator_koenigsberger.cpp  halidi_activator_base.cpp  koenigsberger_activator_base.cpp  potassium_chloride_activator.cpp  potassium_chloride_activator_koenigsberger.cpp  potential_activator.cpp  potential_activator_base.cpp  potential_activator_koenigsberger.cpp  potential_activator_koenigsberger_tanh.cpp  potential_activator_tanh.cpp
core/: CMakeLists.txt
core/inc/: cell.hpp  cell_koenigsberger.hpp  config.hpp  definitions.hpp  point.hpp  point_container.hpp  point_index.hpp  system.hpp  system_koenigsberger.hpp  units.hpp  units_io.hpp  utility.hpp
core/inc/impl/: cell_impl.hpp  no_units.hpp  point_container_impl.hpp  system_impl.hpp  system_koenigsberger_impl.hpp  system_koenigsberger_thread_impl.hpp  units_impl.hpp  with_units.hpp
core/src/: cell.cpp  cell_koenigsberger.cpp  definitions.cpp  point.cpp  point_container.cpp  point_index.cpp  potential_activator_koenigsberger_tanh.cpp  system.cpp  system_koenigsberger.cpp  utility.cpp
documentation/: build.docu  license.docu  license.txt  macro.docu  mainpage.docu  requirements.docu
file/: CMakeLists.txt
file/inc/: argument_parsing.hpp  biffdiag_input_options.hpp  flux_streams.hpp  halidi_input_options.hpp  input_options.hpp  koenigs_input_options.hpp  output_streams.hpp  print_input_options.hpp  read_constants.hpp  read_constants_halidi.hpp  read_constants_koenigsberger.hpp  read_parameters.hpp
file/src/: argument_parsing.cpp  biffdiag_input_options.cpp  flux_streams.cpp  generic_input_options.cpp  halidi_input_options.cpp  koenigsberger_input_options.cpp  output_streams.cpp  read_constants.cpp  read_constants_halidi.cpp  read_constants_koenigsberger.cpp  read_parameters.cpp  simulation_input_options.cpp
integrators/: CMakeLists.txt
integrators/inc/: apply_activator.hpp  crank_nicolson.hpp  equation_type.hpp  forward_euler.hpp  ftcs.hpp  integrators.hpp  no_op.hpp  richardson_extrapolator.hpp  rk4.hpp  solver.hpp
integrators/inc/impl/: ftcs_impl.hpp  identity.hpp  rk4_impl.hpp
integrators/src/: crank_nicolson.cpp
model/: CMakeLists.txt
model/inc/: constants_halidi.hpp  constants_impl.hpp  constants_koenigsberger.hpp  model_equations_2009.hpp  model_equations_2012.hpp  model_equations_koenigsberger.hpp  model_functions_2009.hpp  model_functions_2012.hpp  model_functions_koenigsberger.hpp
model/src/: constants_koenigsberger.cpp  model_equations_2009.cpp  model_equations_2012.cpp  model_equations_koenigsberger.cpp  model_functions_2009.cpp  model_functions_2012.cpp  model_functions_koenigsberger.cpp
programs/: CMakeLists.txt
programs/inc/: halidi.hpp  halidi_bifurcation_diagram.hpp  koenigs_bifurcation_diagram.hpp  koenigsberger.hpp  progress_bar.hpp
programs/inc/old/: main_bifuraction_halidi.hpp  main_bifuraction_koenigs.hpp  main_koenigsberger.hpp
programs/src/: halidi.cpp  halidi_bifurcation_diagram.cpp  koenigs_bifurcation_diagram.cpp  koenigsberger.cpp  main.cpp  main_halidi.cc
programs/src/old/: main_bifuraction_halidi.cpp  main_bifuraction_koenigs.cpp  main_koenigsberger.cpp
test/src/: test_ftcs.cpp  test_gap_junctions.cpp  test_koenigsberger.cpp  test_main.cpp  test_model.cpp  test_model_equations.cpp  test_rk4.cpp  test_small_scale.cpp
